--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "replay",
   "description": "When API testing slows you down: record and replay HTTP responses like a boss",
-  "version": "2.1.2",
+  "version": "2.1.2-decompress",
   "config": {
     "tag": "next"
   },
@@ -36,6 +36,7 @@
     "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.14.0",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.0",
     "del": "^2.2.2",
     "eslint": "^3.5.0",
     "express": "^4.14.0",
