--- a/package.json
+++ b/package.json
@@ -24,21 +24,24 @@
     "postpublish": "gulp tag"
   },
   "dependencies": {
-    "babel-runtime": "5.2.9",
-    "debug": "^2.0",
+    "babel-runtime": "^6.11.6",
+    "debug": "^2.0.0",
     "js-string-escape": "~1.0.0"
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "babel": "^5.2.9",
-    "babel-eslint": "^3.0.1",
+    "babel": "^6.5.2",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-nodejs-lts": "^2.0.1",
+    "babel-register": "^6.11.6",
     "body-parser": "^1.12.3",
     "compression": "^1.6.0",
     "del": "^1.1.1",
     "eslint": "^0.20.0",
     "express": "^4.12.3",
     "gulp": "^3.8.11",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-eslint": "^0.11.1",
     "gulp-exec": "^2.1.1",
     "gulp-notify": "^2.2.0",
