--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "replay",
-  "description": "When API testing slows you down: record and replay HTTP responses like a boss",
-  "version": "2.1.0",
+  "name": "retell",
+  "description": "When API testing slows you down: retell HTTP responses like a boss",
+  "version": "1.0.0",
   "config": {
     "tag": "next"
   },
   "author": "Assaf Arkin <assaf@labnotes.org> (http://labnotes.org/)",
+  "maintainers": [
+    "Vladimir Varankin <nek.narqo@gmail.com> (https://github.com/narqo)"
+  ],
   "keywords": [
     "test",
     "testing",
@@ -44,7 +47,6 @@
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^0.11.1",
     "gulp-exec": "^2.1.1",
-    "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "mocha": "^2.2.4",
@@ -52,15 +54,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/assaf/node-replay"
+    "url": "https://github.com/narqo/node-retell"
   },
   "bugs": {
-    "url": "https://github.com/assaf/node-replay/issues"
+    "url": "https://github.com/narqo/node-retell/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/assaf/node-replay/blob/master/MIT-LICENSE"
+      "url": "https://github.com/narqo/node-retell/blob/master/MIT-LICENSE"
     }
   ]
 }
