--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "retell",
-  "description": "When API testing slows you down: retell HTTP responses like a boss",
-  "version": "1.0.0",
+  "description": "When API testing slows you down, retell HTTP responses",
+  "version": "1.1.0",
   "config": {
     "tag": "next"
   },
