--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-runtime": "^6.11.6",
     "debug": "^2.2.0",
+    "istextorbinary": "^2.1.0",
     "js-string-escape": "^1.0.1"
   },
   "devDependencies": {
